>INT Fixed vertical align in status-bar

--- a/htdocs/css/janox/statusbar.css
+++ b/htdocs/css/janox/statusbar.css
@@ -12,7 +12,8 @@
 
 .o2statusinfo {
     color: #595959;
-    float: left;
+    display: inline;
+    vertical-align: middle;
     white-space: nowrap;
     padding-left: 5px;
     padding-right: 10px;
@@ -28,7 +29,8 @@
 
 .o2statustext {
     color: #595959;
-    float: left;
+    display: inline;
+    vertical-align: middle;
     white-space: nowrap;
     padding-left: 10px;
     padding-right: 10px;
