--- a/htdocs/css/newsky/statusbar.css
+++ b/htdocs/css/newsky/statusbar.css
@@ -11,7 +11,8 @@
     }
 
 .o2statusinfo {
-    float: left;
+    display: inline;
+    vertical-align: middle;
     white-space: nowrap;
     padding-left: 5px;
     padding-right: 10px;
@@ -26,7 +27,8 @@
 
 .o2statustext {
     color: #444444;
-    float: left;
+    display: inline;
+    vertical-align: middle;
     white-space: nowrap;
     padding-left: 10px;
     padding-right: 10px;
